--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -37,6 +37,11 @@
                 = @item.shipping_cost
             %tr
               %th
+                配送の方法
+              %td
+                = @item.shipping_method.name
+            %tr
+              %th
                 配送元地域
               %td
                 = @item.prefecture.name
