--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -25,6 +25,12 @@
               %td
                 = link_to @item.category.ancestry, "#"
                 = link_to "> #{@item.category.name}", "#"
+            - if @item.brand.present?
+              %tr
+                %th
+                  ブランド
+                %td
+                  = @item.brand.name
             %tr
               %th
                 商品の状態
