--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -40,7 +40,7 @@
               %th
                 配送料の負担
               %td
-                = @item.shipping_cost
+                = @item.shipping_cost.cost
             %tr
               %th
                 配送の方法
@@ -55,14 +55,14 @@
               %th
                 発送日の目安
               %td
-                = @item.shipping_date
+                = @item.shipping_date.date
       .item-container__price-box
         %span.item-container__price-box__price
           = "¥#{@item.price.to_i.to_s(:delimited)}"
         %span.item-container__price-box__tax
           (税込)
         %span.item-container__price-box__delivery-fee
-          = @item.shipping_cost.gsub(/送料込み.+/, "送料込み").gsub(/着払い.+/, "着払い")
+          = @item.shipping_cost.sub_cost
       - if current_user.id == @item.user_id
         = link_to "商品の編集", "#", {class: "item-container__edit-btn"}
         %p
